# FitgirlFast

./: .gitignore  LICENSE  README.md  ff.py  requirements.txt
backend/: main.py
backend/api/: events.py  routes.py  schemas.py  server.py  websocket.py
backend/core/: browser_manager.py  cancel_manager.py  config_manager.py  download_manager.py  events.py  extraction_manager.py  pause_manager.py  provider_manager.py  queue_manager.py  session_manager.py  stats_manager.py
backend/downloaders/: base.py  ftp_downloader.py  github_downloader.py  http_downloader.py  torrent_downloader.py
backend/models/: download.py  provider.py  queue.py  session.py  settings.py  statistics.py
backend/resolvers/: fuckingfast.py  github.py  magnet.py  privatebin.py
backend/services/: history_service.py  recovery_service.py  url_import_service.py
backend/utils/: archive.py  checksum.py  eta.py  filename.py  filesystem.py  network.py  retry.py
frontend/: CMakeLists.txt
frontend/src/: main.cpp
frontend/src/api/: api_client.cpp  api_client.h  websocket_client.cpp  websocket_client.h
frontend/src/app/: app.cpp  app.h
frontend/src/models/: download_model.h  settings_model.h  statistics_model.h
tests/: test1.py  test2.py  test3.py
